<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">Telelogger H2politO</string>
    <string name="app_name">Telelogegr H2politO</string>
    <string name="devices">USB Devices</string>
    <string name="FuelCell">FC:0 V</string>
    <string name="SuperCap">SC: 0 V</string>
    <string name="FCCurrent">0 A</string>
    <string name="purge">S</string>
    <string name="Speed">0 Km/h</string>
    <string name="Short">C</string>
    <string name="emergences">E</string>
    <string name="MotorOn">MO</string>
    <string name="ActuationOn">AO</string>
    <string name="temperature">0 c°</string>
    <string name="strategy">ST: 45 </string>
    <string name="st">ST:</string>
</resources>
