<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="224dp"
    tools:layout_editor_absoluteY="2dp">

    <View
        android:id="@+id/TopRow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/MiddleRow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/BottomRow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiddleRow" />

    <View
        android:id="@+id/Separator1.1"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/TopRow"
        app:layout_constraintEnd_toStartOf="@+id/Separator1.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/Separator2.1"
        android:layout_width="3dp"
        android:layout_height="0dp"

        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/Separator2.2"
        android:layout_width="3dp"
        android:layout_height="0dp"

        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/Separator2.3"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/Separator1.2"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toTopOf="@+id/TopRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/Purge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:padding="15dp"
        android:text="@string/purge"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/TopRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Separator1.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Short"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:text="@string/Short"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/TopRow"
        app:layout_constraintEnd_toStartOf="@+id/Separator1.2"
        app:layout_constraintStart_toEndOf="@+id/Separator1.1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Emergences"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:text="@string/emergences"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/Separator1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Separator1.2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MotorOn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:text="@string/MotorOn"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toStartOf="@+id/Separator2.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopRow" />

    <TextView
        android:id="@+id/ActuationOn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:text="@string/ActuationOn"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toStartOf="@+id/Separator2.2"
        app:layout_constraintStart_toEndOf="@+id/Separator2.1"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:text="@string/temperature"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toStartOf="@+id/Separator2.3"
        app:layout_constraintStart_toEndOf="@+id/Separator2.2"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        />

    <View
        android:id="@+id/view7"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:background="#ea9c0e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiddleRow" />

    <TextView
        android:id="@+id/FCVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/FuelCell"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomRow"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/VoltageSC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textAlignment="center"
        android:text="@string/SuperCap"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRow" />

    <TextView
        android:id="@+id/FCCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/FCCurrent"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/BottomRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/Speed"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/BottomRow"
        />

    <TextView
        android:id="@+id/Strategy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/st"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/MiddleRow"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@+id/Separator2.3"
        app:layout_constraintTop_toBottomOf="@+id/TopRow"
        />

    <TextView
        android:id="@+id/PowerModeBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRow" />

</androidx.constraintlayout.widget.ConstraintLayout>